policies/tests/restrict-image-registries/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-image-registries-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: restrict-image-registries
    rule: validate-image-registry
    resource: approved-registry-pod
    kind: Pod
    result: pass
  - policy: restrict-image-registries
    rule: validate-image-registry
    resource: unapproved-registry-pod
    kind: Pod
    result: fail
